[package]
name = "aoc"
version = "0.1.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.10"
lazy_static = "1.4"
regex = "1.7"
# arrayvec = "0.5"
# regex = "1.4"
# chrono = "0.4"
# ring_queue = "0.1"
# subslice = "0.2"
